CHANGE LOG FOR PEGASUS

------------------------------------------------------------------------------
--

Version 0.98.0 - Work in progress

1. (Mike Brasher) Added support for class association operations
    (references(), associators(), referenceNames(), associatorNames()).

------------------------------------------------------------------------------
--

Version 0.97.4 - Tag Created for 0.97.4 and snapshot 7 July 2001

1. Deamonizaiton added to CIMServer.cpp by Mike Day.  This includes code bothe
for NT and Linux platforms.

2. KS Changed the namespace cimv20 to cimv2 and the default port from 888 to
5988.
NOTE: 5988 is now the officially recognized preferred port for a CIMServer by
the DMTF.

3. KS Corrected some errors found in interoperability testing during the DMTF
Fusion event.  THis included a) extended the test for end of HTTP header from
CR/LF/CR/LF to also allow LF/LF.  Not strictly legal but widely used. b).
Extended the HTTP message ID to allow for non-numeric message IDs.

4. Broke out RepositoryDeclContext class from Repository/CIMRepository.cpp
and created RepositoryDeclContext.{cpp,h}.  This is the first step in
revamping the compiler to work independently of the repository (grb).

5. Created new makefile Compiler/Makefile.grammar and modified
Compiler/Makefile; and added cimmof_tab.{cpp,h} and cimmof_lex.cpp.
Now when you build normally, you will get the committed grammar and parser
files instead of generating your own for a particular platform.  This should
prevent back-level lex and yacc implementations from generating troublesome
code.  The committed files are generated from flex 2.5.4 and bison 1,28.
(grb)

6.  Added Compiler/compilerDeclContext.{cpp,h} and makefile changes.
This change paves the way for upcoming changes that will allow the compiler
to work indepently of the repository. (grb)

7. Extend testclient (clients/testclient) tests and functions. ks 19 June 2001

8. CV added const to CIMOperations modifyInstance, createInstance,